[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pmoired"]
exclude = ["tutorials", "examples", "banner"]

[tool.setuptools.package-data]
pmoired = ["newVltiHzn_obsDoors.txt", 
           "transir_gravity.pckl"]

[tool.setuptools.dynamic]
version = {attr='pmoired.__version__'}

[project]
name = "pmoired"
requires-python = ">=3.8"
readme = {file="README.md", content-type="text/markdown"}
license = {file="LICENCE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Antoine Mérand", email = "amerand@eso.org"},
]
dependencies = [
    "scipy", 
    "numpy", 
    "matplotlib", 
    "astropy", 
    "astroquery"
]

[project.urls]
Repository = ["https://github.com/amerand/PMOIRED"]
Bibliography = ["https://ui.adsabs.harvard.edu/public-libraries/dz7RG915Swq5yAB1KwmgTA"]
Publications = ["https://ui.adsabs.harvard.edu/search/p_=0&q=%20full%253A%22PMOIRED%22"]

